kubernetes/apps/default/miniflux/networkpolicy.yaml
---
# yaml-language-server: $schema=https://schemas.ajgon.casa/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: miniflux-egress-external
  namespace: rook-ceph
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: miniflux
  egress:
    - toCIDRSet:
        - cidr: 0.0.0.0/0
      toPorts:
        - ports:
            - port: "443"
